@@ -113,13 +113,16 @@ interface "IFCooldownLabel"
 	__Doc__[[Whether change the font size based on the jeight]]
 	property "IFCooldownLabelAutoSize" { Type = Boolean, Default = true }
 
+	__Doc__[[The min duration to display the label]]
+	property "IFCooldownLabelMinDuration" { Type = Number, Default = 0 }
+
 	------------------------------------------------------
 	-- Event Handler
 	------------------------------------------------------
 	local function OnCooldownUpdate(self, start, duration)
 		local label = self:GetChild("CooldownLabel")
 
-		if start and start > 0 and duration and duration > 0 then
+		if start and start > 0 and duration and duration > self.IFCooldownLabelMinDuration then
 			-- Insert to update list
 			self.__IFCooldownLabel_End = start + duration
 			self.__IFCooldownLabel_UpdateTime = GetTime()
