@@ -1,3 +1,6 @@
+2017/08/24 v146
+    1. New property IFCooldownLabelMinDuration added for IFCooldownLabel.
+
 2017/08/14 v145
     1. Re-design the grid updating logic in action bar system for better inheritance.
 
